fixed profile photo border gap

--- a/website/private/structure/HomeAbout.module.css
+++ b/website/private/structure/HomeAbout.module.css
@@ -35,6 +35,9 @@
 
   border-radius: 100vh;
   border: 0.1em solid var(--color-d);
+  /* https://stackoverflow.com/questions/23490320/gap-between-border-and-image-when-border-radius-is-added */
+  background: var(--color-d);
+  background-clip: border-box;
 }
 
 @media (max-aspect-ratio: 1/1) {
